v 2.8.0	page works HTML CSS		Part 1

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,42 @@
 						</div>
 						<div class="portfolio__slider swiper">
 							<div class="portfolio__wrapper swiper-wrapper">
+								<div class="portfolio__slide swiper-slide homepro">
+									<article class="item-portfolio">
+										<a
+											target="_blank"
+											href="works.html"
+											class="item-portfolio__image-ibg"
+										>
+											<img src="@img/portfolio/homepro.jpg" alt="HomePro" />
+										</a>
+										<div class="item-portfolio__body">
+											<h4 class="item-portfolio__title">
+												<a
+													href="https://vitaliisoloninko.github.io/homepro/"
+													class="item-portfolio__link-title"
+													>HomePro - Home services
+												</a>
+											</h4>
+											<div class="item-portfolio__footer">
+												<div class="item-portfolio__category category-link">
+													JavaScript
+												</div>
+												<div class="item-portfolio__category category-link">
+													GULP
+												</div>
+												<div class="item-portfolio__category category-link">
+													Webpack
+												</div>
+												<a
+													href="https://vitaliisoloninko.github.io/homepro/"
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
+											</div>
+										</div>
+									</article>
+								</div>
 								<div class="portfolio__slide swiper-slide furino">
 									<article class="item-portfolio">
 										<a
@@ -188,41 +224,6 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/growfy/"
-													class="item-portfolio__link"
-													><img src="@img/icons/link.svg" alt="link"
-												/></a>
-											</div>
-										</div>
-									</article>
-								</div>
-								<div class="portfolio__slide swiper-slide homepro">
-									<article class="item-portfolio">
-										<a
-											href="https://vitaliisoloninko.github.io/homepro/"
-											class="item-portfolio__image-ibg"
-										>
-											<img src="@img/portfolio/homepro.jpg" alt="HomePro" />
-										</a>
-										<div class="item-portfolio__body">
-											<h4 class="item-portfolio__title">
-												<a
-													href="https://vitaliisoloninko.github.io/homepro/"
-													class="item-portfolio__link-title"
-													>HomePro - Home services
-												</a>
-											</h4>
-											<div class="item-portfolio__footer">
-												<div class="item-portfolio__category category-link">
-													JavaScript
-												</div>
-												<div class="item-portfolio__category category-link">
-													GULP
-												</div>
-												<div class="item-portfolio__category category-link">
-													Webpack
-												</div>
-												<a
-													href="https://vitaliisoloninko.github.io/homepro/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
