--- a/src/works.html
+++ b/src/works.html
@@ -14,7 +14,7 @@
 						<div class="works__header">
 							<div class="works__title title">
 								<div class="title__label">MY WORKS</div>
-								<h2 class="title__value">Featured Portfolios</h2>
+								<h2 class="title__value">Developed sites</h2>
 							</div>
 							<div class="works__controls">
 								<div class="works__dotts"></div>
@@ -38,19 +38,58 @@
 							<div class="swiper-wrapper">
 								<div class="works__slide swiper-slide">
 									<div class="works__image -ibg">
-										<img src="@img/works/01.jpg" alt="Image" />
+										<img src="@img/works/work-homepro.jpg" alt="homepro" />
 									</div>
 									<a
-										href="#"
+										href="https://vitaliisoloninko.github.io/homepro/"
 										data-swiper-parallax-x="400%"
 										data-swiper-parallax-opacity="0"
 										data-swiper-parallax-scale="0"
 										class="works__content"
 									>
-										<div class="works__title">Furino</div>
-										<div class="works__text">Furniture shop</div>
+										<div class="works__title">HomePro</div>
+										<div class="works__text">Home services</div>
 										<div class="works__arrow">
-											<img src="@img" alt="" />
+											View the site
+											<img src="@img/icons/arrow-black.svg" alt="arrow-black" />
+										</div>
+									</a>
+								</div>
+								<div class="works__slide swiper-slide">
+									<div class="works__image -ibg">
+										<img src="@img/works/work-homepro.jpg" alt="homepro" />
+									</div>
+									<a
+										href="https://vitaliisoloninko.github.io/homepro/"
+										data-swiper-parallax-x="400%"
+										data-swiper-parallax-opacity="0"
+										data-swiper-parallax-scale="0"
+										class="works__content"
+									>
+										<div class="works__title">HomePro</div>
+										<div class="works__text">Home services</div>
+										<div class="works__arrow">
+											View the site
+											<img src="@img/icons/arrow-black.svg" alt="arrow-black" />
+										</div>
+									</a>
+								</div>
+								<div class="works__slide swiper-slide">
+									<div class="works__image -ibg">
+										<img src="@img/works/work-homepro.jpg" alt="homepro" />
+									</div>
+									<a
+										href="https://vitaliisoloninko.github.io/homepro/"
+										data-swiper-parallax-x="400%"
+										data-swiper-parallax-opacity="0"
+										data-swiper-parallax-scale="0"
+										class="works__content"
+									>
+										<div class="works__title">HomePro</div>
+										<div class="works__text">Home services</div>
+										<div class="works__arrow">
+											View the site
+											<img src="@img/icons/arrow-black.svg" alt="arrow-black" />
 										</div>
 									</a>
 								</div>
