--- a/src/works.html
+++ b/src/works.html
@@ -37,68 +37,148 @@
 						<div class="works__slider swiper">
 							<div class="swiper-wrapper">
 								<div class="works__slide swiper-slide">
-									<div class="works__image -ibg">
-										<img src="@img/works/work-homepro.jpg" alt="homepro" />
-									</div>
-									<a
-										href="https://vitaliisoloninko.github.io/homepro/"
-										data-swiper-parallax-x="400%"
-										data-swiper-parallax-opacity="0"
-										data-swiper-parallax-scale="0"
-										class="works__content"
-									>
-										<div class="works__title">HomePro</div>
-										<div class="works__text">Home services</div>
-										<div class="works__arrow">
-											View the site
-											<img src="@img/icons/arrow-black.svg" alt="arrow-black" />
+									<div class="works__wrapper">
+										<div class="works__image -ibg">
+											<img src="@img/works/work-homepro.jpg" alt="homepro" />
 										</div>
-									</a>
-								</div>
-								<div class="works__slide swiper-slide">
-									<div class="works__image -ibg">
-										<img src="@img/works/work-homepro.jpg" alt="homepro" />
+										<a
+											href="https://vitaliisoloninko.github.io/homepro/"
+											data-swiper-parallax-x="400%"
+											data-swiper-parallax-opacity="0"
+											data-swiper-parallax-scale="0"
+											class="works__content"
+										>
+											<div class="works__title">HomePro</div>
+											<div class="works__text">Home services</div>
+											<div class="works__arrow">
+												View the site
+												<img
+													src="@img/icons/arrow-black.svg"
+													alt="arrow-black"
+												/>
+											</div>
+										</a>
 									</div>
-									<a
-										href="https://vitaliisoloninko.github.io/homepro/"
-										data-swiper-parallax-x="400%"
-										data-swiper-parallax-opacity="0"
-										data-swiper-parallax-scale="0"
-										class="works__content"
-									>
-										<div class="works__title">HomePro</div>
-										<div class="works__text">Home services</div>
-										<div class="works__arrow">
-											View the site
-											<img src="@img/icons/arrow-black.svg" alt="arrow-black" />
-										</div>
-									</a>
-								</div>
-								<div class="works__slide swiper-slide">
-									<div class="works__image -ibg">
-										<img src="@img/works/work-homepro.jpg" alt="homepro" />
+									<div class="works__body">
+										<h2 class="works__title title__value">Technologies</h2>
+										<ul class="works__items">
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">JavaScript</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">SCSS/CSS</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">HTML5</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">WebPack</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">GULP</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Slider "Swiper"</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--purple">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Git/GitHub</div>
+											</li>
+										</ul>
 									</div>
-									<a
-										href="https://vitaliisoloninko.github.io/homepro/"
-										data-swiper-parallax-x="400%"
-										data-swiper-parallax-opacity="0"
-										data-swiper-parallax-scale="0"
-										class="works__content"
-									>
-										<div class="works__title">HomePro</div>
-										<div class="works__text">Home services</div>
-										<div class="works__arrow">
-											View the site
-											<img src="@img/icons/arrow-black.svg" alt="arrow-black" />
-										</div>
-									</a>
+									<div class="works__body">
+										<h2 class="works__title title__value">Features</h2>
+										<ul class="works__items">
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Responsive Web Design</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Adaptive pictures</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Animation</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Navigation</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Scroll watcher</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Show more</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Spoilers</div>
+											</li>
+											<li class="works__item item-work">
+												<div class="item-work__icon item-work__icon--grey">
+													<img src="@img/icons/check.svg" alt="Check" />
+												</div>
+												<div class="item-work__text">Star rating</div>
+											</li>
+										</ul>
+									</div>
+									<div class="works__body">
+										<h2 class="works__title title__value">Links</h2>
+										<ul class="works__items">
+											<li class="works__item item-work">
+												<button class="form__button">GitHub develop</button>
+											</li>
+											<li class="works__item item-work">
+												<button class="form__button">GitHub production</button>
+											</li>
+											<li class="works__item item-work">
+												<button class="form__button">View the site</button>
+											</li>
+										</ul>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
 			</main>
-			@@include('html/_footer.htm',{})
 		</div>
 		@@include('html/_js.htm',{})
 	</body>
